Fixed? rank info button on Safari
Switched rank popover from button to a for crosscompatibility

--- a/missions.css
+++ b/missions.css
@@ -139,6 +139,10 @@ input:checked + .slider:before {
   text-decoration: none;
 }
 
+.infoButton:hover {
+  cursor: pointer;
+}
+
 .scriptedRewardInfo {
   font-weight: bolder;
 }
